# rust_samples22

healthy/: Cargo.toml
healthy/src/: lib.rs  main.rs
src/: front_of_house.rs  lib.rs  main.rs  structures  structures.rs  t_c.rs  variables  variables.rs
src/adder/src/: lib.rs
src/adder/src/common/: mod.rs
src/adder/tests/: intergration_test.rs
src/front_of_house/: back_of_house.rs  hosting.rs  serve.rs
src/sgrep/: Cargo.toml  output.txt  poem.txt
src/sgrep/src/: lib.rs  main  main.rs
src/str_test/: Cargo.toml
src/str_test/src/: lib.rs
src/t_c/: test_vector.rs
